# health-automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  checklist.md  feature_request.yml
.github/workflows/: assign-issue.yml  ci.yml  create-checklist.yml
docs/: README.md  pre_reqs.md  project.md
health_automation/: checkpoint_manager.py  crew.py  main.py
health_automation/config/: agents.py  agents.yaml  groq_setup.py  tasks.py  tasks.yaml
health_automation/llm_setup/: groq_setup.py  rate_limiter.py
health_automation/tools/: config_loader.py  email_tool.py  generate_gmail_token.py  google_search_tool.py  notion_tool.py  pubmed_tool.py  shopping_tool.py
src/health_automation/: crew.py
tests/: test_dummy.py  test_email.py  test_google_search.py  test_notion.py  test_pubmed.py
